# liza_alert_detection

./: .gitignore  Dockerfile  README.md  example_inference.ipynb  metadata.json  pyproject.toml
src/: solution.py
