[tool.poetry]
name = "liza-alert-detection"
version = "0.1.0"
description = ""
authors = ["Nikita Yatchenko <yatchenko.nikita@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
ultralytics = "^8.3.11"
numpy = "^2.1.2"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
